// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Buttons Button radio buttons work 1`] = `
<ButtonGroup
  radio={true}
>
  <div
    className="btn-group"
    data-toggle="radio"
  >
    <Button
      name="radio"
      onChange={[Function]}
      radio={true}
      value="WHUR"
    >
      <label
        className="btn btn-default"
        htmlFor="radio-button-0"
      >
        <input
          className="sr-only"
          name="radio"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="WHUR"
        />
        WHUR
      </label>
    </Button>
    <Button
      checked={true}
      name="radio"
      onChange={[Function]}
      radio={true}
      value="WETA"
    >
      <label
        className="btn btn-default active"
        htmlFor="radio-button-1"
      >
        <input
          checked={true}
          className="sr-only"
          name="radio"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="WETA"
        />
        WETA
      </label>
    </Button>
    <Button
      name="radio"
      onChange={[Function]}
      radio={true}
      value="WTOP"
    >
      <label
        className="btn btn-default"
        htmlFor="radio-button-2"
      >
        <input
          className="sr-only"
          name="radio"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="WTOP"
        />
        WTOP
      </label>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`Component > Buttons Button radio buttons work 2`] = `
<ButtonGroup
  radio={true}
>
  <div
    className="btn-group"
    data-toggle="radio"
  >
    <Button
      name="radio"
      radio={true}
      value="WHUR"
    >
      <label
        className="btn btn-default"
        htmlFor="radio-button-0"
      >
        <input
          className="sr-only"
          name="radio"
          onClick={[Function]}
          type="radio"
          value="WHUR"
        />
        WHUR
      </label>
    </Button>
    <Button
      defaultChecked={true}
      name="radio"
      radio={true}
      value="WETA"
    >
      <label
        className="btn btn-default"
        htmlFor="radio-button-1"
      >
        <input
          className="sr-only"
          defaultChecked={true}
          name="radio"
          onClick={[Function]}
          type="radio"
          value="WETA"
        />
        WETA
      </label>
    </Button>
    <Button
      name="radio"
      radio={true}
      value="WTOP"
    >
      <label
        className="btn btn-default"
        htmlFor="radio-button-2"
      >
        <input
          className="sr-only"
          name="radio"
          onClick={[Function]}
          type="radio"
          value="WTOP"
        />
        WTOP
      </label>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`Component > Buttons Button renders correctly 1`] = `
<a
  className="btn btn-fabulous btn-block btn-sm some-class"
  href="#"
  onClick={[Function]}
  tabIndex={0}
  target="_blank"
/>
`;

exports[`Component > Buttons Group renders correctly 1`] = `
<div
  className="btn-group btn-group-justified"
/>
`;
